# economy-bot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
engine/: addon.py  bot.py  config.py  gamble.py  logger.py  messages.py  run.py  sql.py  utils.py  views.py
engine/casino/: cog.py  config.py  gamble.py  messages.py  utils.py  views.py
settings/: cooldown.json  prices.json  probabilities.json  taxes_and_encashment.json
